# agentbrainsystem

./: .atualizar-docs.json  .coderabbit.yaml  .gitignore  .gitmessage.txt  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.js  biome.json  index.html  node_modules  package-lock.json  package.json  playwright.config.ts  robots.txt  sitemap.xml  styles.css  tsconfig.build.json  tsconfig.e2e.json  tsconfig.json  tsconfig.ui.json  vitest.config.ts  vitest.e2e.config.ts  vitest.global-setup.ts
.claude/: settings.json
.github/: CODEOWNERS  pull_request_template.md  renovate.json  zizmor.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  task.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  zizmor.yml
assets/: site.webmanifest
bench/: bench.ts
docs/: DESIGN.md  agent-handbook.md  documentation-standards.md  engineering-workflow.md  export-format.md  index.md  log.md  release-runbook.md  testing-strategy.md
docs/adr/: 0001-storage-and-embeddings.md  0002-ui-build-pipeline-and-frontend-stack.md  (+17 more)
e2e/: cli.e2e.ts  global-setup.ts  harness.ts  maintain.e2e.ts  mcp.e2e.ts  optimize.e2e.ts  ui.pw.ts
scripts/: bench-recall.mjs  build-ui.mjs  certify-1.0.sh  make-readme-gif.sh
src/: config.test.ts  config.ts  global.test.ts  global.ts  index.ts  memory.ts  version.test.ts  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/ui/: index.html  popover.js
(+275 files in other folders)
