[package]
name = "agentbrainsystem-companion"
version = "0.1.0"
description = "agentbrainsystem tray companion — the creature, glanceable (DESIGN §12)"
authors = ["Victor Juliani"]
edition = "2021"
rust-version = "1.77.2"

# The library the binary links against (Tauri 2 mobile-ready layout). The desktop
# tray app is a thin binary over this lib so the same code can target mobile later.
[lib]
name = "abs_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Bundled SQLite so the companion never depends on a system libsqlite that lacks the
# build options the store was written with. We only ever read the base tables
# (observations/sessions), never the vec0/fts5 virtual tables, so no extensions are
# needed — and we open strictly read-only (the tray must never mutate memory).
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
# Default to no extra features; the tray-icon feature is enabled above unconditionally.
default = []
